* Applied patch by idefix that disables the "Initialize" button if the name   field is empty. This is part of ticket #4123. * The message constants should be moved into their own shared   header, though; added a TODO for this.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35524 a95241bf-73f2-0310-859d-f6bbb57e9c96